<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.AuthSigninFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/thirty_dp">


        <ImageView
            android:id="@+id/image_signup_userPic"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginTop="@dimen/thirty_dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/desc_image" />


        <TextView
            android:id="@+id/text_signup_basic_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/caption_basic_information"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/fifteen_sp"
            app:layout_constraintTop_toBottomOf="@+id/image_signup_userPic"/>

        <EditText
            android:id="@+id/input_signup_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/full_name"
            android:inputType="textCapWords"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray"
            android:theme="@style/PrimaryFocus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_signup_basic_caption"/>

        <EditText
            android:id="@+id/input_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray"
            android:theme="@style/PrimaryFocus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_signup_fullName" />

        <TextView
            android:id="@+id/text_signup_private_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:text="@string/caption_private_information"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/fifteen_sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_signup_email" />

        <EditText
            android:id="@+id/input_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray"
            android:theme="@style/PrimaryFocus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_signup_private_caption" />


        <EditText
            android:id="@+id/input_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray"
            android:theme="@style/PrimaryFocus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_signup_phone" />


        <Button
            android:id="@+id/button_signup_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_signup"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_signup_password" />

        <TextView
            android:id="@+id/text_signup_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="center"
            android:text="@string/caption_login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray"
            android:textSize="@dimen/twenty_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signup_go" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>