<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.AuthLockFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/thirty_dp">

        <ImageView
            android:id="@+id/image_lock_user"
            android:layout_width="@dimen/one_hundred_dp"
            android:layout_height="@dimen/one_hundred_dp"
            android:layout_marginTop="@dimen/fifty_dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/desc_image" />

        <TextView
            android:id="@+id/text_lock_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/caption_enter_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/gray"
            android:textSize="@dimen/fifteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_lock_user" />

        <EditText
            android:id="@+id/input_lock_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/fifteen_dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/gray"
            android:theme="@style/PrimaryFocus"
            android:windowSoftInputMode="stateHidden"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_lock_caption" />

        <TextView
            android:id="@+id/text_lock_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:text="@string/caption_forgot_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_lock_password" />

        <Button
            android:id="@+id/button_lock_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_lock_forgot" />

        <TextView
            android:id="@+id/text_lock_singin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:text="@string/caption_change_account"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_lock_go" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>