<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SplashActivity"
    android:padding="@dimen/fifteen_dp">

    <ImageView
        android:layout_width="@dimen/one_hundred_twenty_dp"
        android:layout_height="@dimen/one_hundred_twenty_dp"
        android:id="@+id/img_splash"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/desc_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:fontFamily="monospace"
        android:text="@string/app_name_caps"
        android:textColor="@color/black_effective"
        android:textSize="@dimen/thirty_five_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_splash" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:fontFamily="serif-monospace"
        android:text="@string/app_description"
        android:textColor="@color/black_effective"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

</android.support.constraint.ConstraintLayout>
